--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,6 +5,7 @@ RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php?$1
+RewriteRule ^(([a-zA-Z0-9\/]+)*([^\/]))$ $1/
 
 #убирает ? со строки
 #позволяет убрать index.php (можно писать без него)
